# pythonProject

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.vagrant/machines/default/virtualbox/: action_set_name  id  index_uuid  vagrant_cwd
example/: example.py  pyproject.toml
fastapi/: main.py  my_server.py  pydantc.py  pyproject.toml
fastapi/src/client/: sdk.gen.ts  types.gen.ts
llm/: .gitignore  pi.py
llm-chat/: .gitignore  README.md  chat_with_documents.py  langchain_gemini_qa.py  loader.py  pyproject.toml  requirements.txt
llm/.ipynb_checkpoints/: pyproject-checkpoint.toml
oio/: list.py
