[tool.poetry]
name = "llm"
version = "0.1.0"
description = "llm models"
authors = ["Domengo <dominicsengo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
scikit-learn = "^1.4.2"
setuptools = "^69.5.1"
flask = "^3.0.3"
requests = "^2.31.0"
flask-cors = "^4.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
