[tool.poetry]
name = "llm-chat"
version = "0.1.0"
description = ""
authors = ["Domengo <dominicsengo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^3.0.1"
chromadb = "^0.5.0"
langchain-community = "^0.0.38"
langchain = "^0.1.19"
langchain-google-genai = "^1.0.3"
google-generativeai = "^0.5.2"
jupyter = "^1.0.0"
pypdf = "^4.2.0"
tiktoken = "^0.6.0"
openai = "^1.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
